--- a/app/src/main/res/layout/activity_data_pendaftaran.xml
+++ b/app/src/main/res/layout/activity_data_pendaftaran.xml
@@ -4,30 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
+    android:background="@mipmap/bg"
     tools:context=".DataPendaftaranActivity">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.CardView
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <RelativeLayout
-                android:padding="@dimen/activity_horizontal_margin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="DATA PENDAFTARAN"
-                    android:layout_centerInParent="true"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
         <android.support.v7.widget.CardView
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
@@ -44,10 +26,23 @@
                     android:text="Ubah Data"
                     android:textStyle="bold"
                     android:textSize="10sp"
-                    android:textColor="@color/colorWhite"
-                    android:background="@drawable/background_gradient"
+                    android:background="@color/colorbg"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="20dp" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:hint="No Pendaftaran"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/noPendaftaran"
+                        android:text="no"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -81,7 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="TEMPAT LAHIR"
+                        android:hint="Tempat Lahir"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -95,7 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="TEMPAT LAHIR"
+                        android:hint="Tanggal Lahir"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -123,7 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="TELEPON"
+                        android:hint="Telepon"
                         android:inputType="phone"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
@@ -139,7 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="ALAMAT"
+                        android:hint="Alamat"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -153,7 +148,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="SEKOLAH ASAL"
+                        android:hint="Sekolah Asal"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -167,7 +162,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="TAHUN LULUS"
+                        android:hint="Tahun Lulus"
                         android:inputType="number"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
@@ -186,14 +181,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <LinearLayout
+                    android:layout_marginStart="10dp"
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+                    <TextView
+                        android:hint="MTK"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/nmtk"
                         android:hint="MTK"
                         android:inputType="number"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginStart="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="Bahasa Indonesia"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/nbindo"
@@ -201,26 +211,46 @@
                         android:inputType="number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginStart="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:hint="B.Inggris"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content" />
+
                     <TextView
                         android:id="@+id/nbing"
                         android:hint="B.Ing"
                         android:inputType="number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginStart="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:hint="Rata-rata"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/avg"
                         android:hint="Rata-Rata"
                         android:inputType="number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-                </LinearLayout>
+                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:hint="NAMA AYAH"
+                        android:hint="Nama Ayah"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -235,7 +265,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:hint="NAMA IBU"
+                        android:hint="Nama Ibu"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
 
@@ -252,7 +282,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:hint="JURUSAN"
+                        android:hint="Jurusan"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content" />
 
