--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -12,8 +12,8 @@
             android:layout_centerInParent="true"
             android:overScrollMode="never"
             android:clipToPadding="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         </android.support.v4.view.ViewPager>
         <TextView
             android:textColor="@color/colorWhite"
